--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,15 @@ services:
     build: ./load-balancer
     ports:
       - "80:80"
+
+  database:
+    container_name: mysql-db
+    hostname: mysql-db
+    build: mysql
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: "supersecurepass"
+    volumes:
+      - ./mysql/skitter.sql:/docker-entrypoint-initdb.d/skitter.sql
+      - ./mysql/data:/var/lib/mysql
