--- a/web-server/Dockerfile
+++ b/web-server/Dockerfile
@@ -1,3 +1,16 @@
-FROM nginx
+# AoT
+#
+# Version 1
 
-COPY ./index.html /usr/share/nginx/html
+FROM glassfish:latest
+
+COPY index.html glassfish/domains/domain1/docroot/index.html
+#COPY web.xml glassfish/domains/domain1/config/default-web.xml
+#COPY Skitter_war.war glassfish/domains/domain1/autodeploy/Skitter_war.war
+
+COPY start.sh /
+COPY Skitter_war.war /
+
+EXPOSE 8080
+
+ENTRYPOINT ["/start.sh"]
