load-balancer ssl

--- a/load-balancer/Dockerfile
+++ b/load-balancer/Dockerfile
@@ -1,3 +1,5 @@
 FROM nginx
 
+COPY ./certs/nginx-selfsigned.key /etc/ssl/nginx-selfsigned.key
+COPY ./certs/nginx-selfsigned.crt /etc/ssl/nginx-selfsigned.crt
 COPY ./nginx.conf /etc/nginx/nginx.conf
