--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,9 @@ before_install:
   - docker-compose up --build -d
 
 install: 
-    - pip install locustio
+  - pip install locustio
 language: python
 python:
-    - "2.7.14"
+  - "2.7.14"
 script: 
-    - locust -H http://127.0.0.1:80 -c 10 -n 500 -r 5 --no-web -f locustfile.py
-    - locust -H http://127.0.0.1:80 -c 500 -n 2000 -r 20 --no-web -f locustfile.py
+  - python hello.py
