changed the way authentication is handled to adjust for php

--- a/web-server/Dockerfile
+++ b/web-server/Dockerfile
@@ -1,13 +1,11 @@
-# AoT
-#
-# Version 1
+FROM nginx
 
-FROM glassfish:latest
+#FROM glassfish:latest
 
-COPY index.html glassfish/domains/domain1/docroot/index.html
-COPY default-web.xml glassfish/domains/domain1/config/default-web.xml
+#COPY index.html glassfish/domains/domain1/docroot/index.html
+#COPY default-web.xml glassfish/domains/domain1/config/default-web.xml
 
-COPY start.sh /
-COPY Skitter_war.war /
+#COPY start.sh /
+#COPY Skitter_war.war /
 
-ENTRYPOINT ["/start.sh"]
+#ENTRYPOINT ["/start.sh"]
