--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,9 +28,12 @@ services:
     image: mysql
     environment:
       MYSQL_ROOT_PASSWORD: "supersecurepass"
+    ports:
+      - "3306:3306"
     volumes:
       - ./mysql/skitter.sql:/docker-entrypoint-initdb.d/skitter.sql
       - ./mysql/data:/var/lib/mysql
+
   auth:
     image: auth
     container_name: auth
