--- a/web-server/Dockerfile
+++ b/web-server/Dockerfile
@@ -7,12 +7,14 @@ RUN mkdir /var/www/html/php/
 COPY CSS /var/www/html/CSS
 COPY img /var/www/html/img
 COPY php /var/www/html/php
-COPY /favicon.ico /var/www/html/
 
 RUN chmod -R 777 /var/www/html/CSS
 RUN chmod -R 777 /var/www/html/img
 RUN chmod -R 777 /var/www/html/php
-RUN chmod +rx /var/www/html/favicon.ico
+
+COPY * /var/www/html/
+
+RUN chmod -R 777 /var/www/html
 
 RUN echo 'AddType image/x-icon .ico' >> /etc/apache2/httpd.conf
 
