--- a/web-server/Dockerfile
+++ b/web-server/Dockerfile
@@ -7,6 +7,7 @@ RUN docker-php-source extract && \
 RUN mkdir /var/www/html/CSS/
 RUN mkdir /var/www/html/img/
 RUN mkdir /var/www/html/php/
+RUN mkdir /var/www/html/profile_picture/
 
 COPY CSS /var/www/html/CSS
 COPY img /var/www/html/img
