--- a/web-server/Dockerfile
+++ b/web-server/Dockerfile
@@ -4,7 +4,6 @@ RUN docker-php-source extract && \
 	docker-php-ext-install mysqli \
 	&& docker-php-source delete
 
-
 RUN mkdir /var/www/html/CSS/
 RUN mkdir /var/www/html/img/
 RUN mkdir /var/www/html/php/
@@ -14,17 +13,13 @@ COPY php.ini /usr/local/etc/php
 COPY CSS /var/www/html/CSS
 COPY img /var/www/html/img
 COPY php /var/www/html/php
+COPY *.html /var/www/html/
+COPY favicon.ico /var/www/html/
+
 
 RUN chmod -R 777 /var/www/html/CSS
 RUN chmod -R 777 /var/www/html/img
 RUN chmod -R 777 /var/www/html/php
-
-COPY * /var/www/html/
-
 RUN chmod -R 777 /var/www/html
 
 RUN echo 'AddType image/x-icon .ico' >> /etc/apache2/httpd.conf
-
-COPY /index.html /var/www/html/
-
-EXPOSE 81
