--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,22 +52,22 @@ services:
     ports:
       - "5000:5000" 
 
-  elasticsearch:
-    image: elasticsearch
-    hostname: skits
-    container_name: skits
-    ports:
-      - "9200:9200"
+#  elasticsearch:
+#    image: elasticsearch
+#    hostname: skits
+#    container_name: skits
+#    ports:
+#      - "9200:9200"
   
-  node:
-    container_name: node
-    hostname: node
-    build: ./nodeJS
-    working_dir: /home/node/app
-    environment:
-      - NODE_ENV=production
-    volumes:
-      - ./nodeJS:/home/node/app
-    ports:
-      - "8888:8888"
-    command: "npm start"
+#  node:
+#    container_name: node
+#    hostname: node
+#    build: ./nodeJS
+#    working_dir: /home/node/app
+#    environment:
+#      - NODE_ENV=production
+#    volumes:
+#      - ./nodeJS:/home/node/app
+#    ports:
+#      - "8888:8888"
+#    command: "npm start"
