--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /usr/src/app
 
 COPY api_functions.py ./
 COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 COPY . .
 
