--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,22 @@
 env:
-  DOCKER_COMPOSE_VERSION: 1.18.0
+  - DOCKER_COMPOSE_VERSION=1.21.0
 
 before_install:
   - sudo apt-get update
-  - docker-compose --version
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
-  - docker-compose --version
-  - docker-compose up --build -d
+  - docker-compose -f travis_tests/docker-compose.yml up -d
 
 install: 
-  - pip install locustio
+  - pip install -r travis_tests/db_requirements.txt --upgrade
+
 language: python
+
 python:
   - "2.7.14"
+
 script: 
-  - locust -H http://127.0.0.1 -c 10 -n 500 -r 5 --no-web -f locustfile.py
+  - sleep 60 && python travis_tests/modify_db.py
