--- a/nodeJS/package.json
+++ b/nodeJS/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js"
 },
 "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "body-parser": "^1.15.2"
 },
 "engines": {
     "node": "4.0.0"
