--- a/load-balancer/nginx.conf
+++ b/load-balancer/nginx.conf
@@ -22,7 +22,7 @@ server {
    listen 443 default_server ssl;
 	ssl_certificate /etc/ssl/nginx-selfsigned.crt;
 	ssl_certificate_key /etc/ssl/nginx-selfsigned.key;
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+	ssl_protocols TLSv1.2;
 	ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
 	ssl_prefer_server_ciphers on;
 	ssl_session_cache shared:SSL:10m;
